unit tests: Added unit tests